# AI-Forest-Monitoring-Impact-Assessment

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
assets/: land_polygons.geojson
configs/: data.yaml
database/: sample_queries.sql  schema.sql
deployment/: README.md  app.py  hf_inference.py  requirements.txt
scripts/: compare_models.py  create_dataset.py  deploy_huggingface.py  evaluate_models.py  export_yolo_onnx.py  multi_region_test.py  optimize_yolov8.py  run_ablation_study.py  setup_colab.sh  train_mask_rcnn.py  train_yolov8.py
src/forest_monitor/: __init__.py  analysis.py  constants.py  environment.py  geometry.py  metrics.py  reporting.py  segmentation.py  synthetic.py  visualization.py
src/forest_monitor/data/: __init__.py  pipeline.py
src/forest_monitor/db/: models.py  session.py  types.py
src/forest_monitor/experiments/: __init__.py  ablation.py
src/forest_monitor/models/: __init__.py  evaluation.py  mask_rcnn_dataset.py
src/forest_monitor/pipeline/: __init__.py  ndvi.py  sentinel_ndvi.py
tests/: test_ablation.py  test_analysis.py  test_environment.py  test_reporting.py  test_sentinel_ndvi.py  test_visualization.py
